<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_apply_gui_huan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.storehouse.wanyu.activity.ApplyActivity.ApplyGuiHuanActivity">

    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_ffffff">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/apply_guihuan"
            android:textColor="@color/color_0e3247"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingRight="15dp"
            android:text="@string/apply_submit"
            android:textColor="@color/color_30a2d4"
            android:textSize="12sp" />

    </RelativeLayout>

    <!--申请部门-->
    <RelativeLayout
        android:id="@+id/bumen_rl"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/title_rl"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="14dp">

        <TextView
            android:id="@+id/bumen_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/apply_bumen"
            android:textColor="@color/color_373a41"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@id/bumen_tv"
            android:background="@drawable/bumen_box">

            <TextView
                android:id="@+id/bumen_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_toLeftOf="@+id/bumen_btn"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="软件部"
                android:textColor="@color/color_373a41"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@id/bumen_btn"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_margin="1dp"
                android:background="@color/color_d9d9d9">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/sanjiao" />
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>

    <!--申请人-->
    <RelativeLayout
        android:id="@+id/person_rl"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/bumen_rl"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="9dp">

        <TextView
            android:id="@+id/person_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/apply_person"
            android:textColor="@color/color_373a41"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@id/person_tv"
            android:background="@drawable/bumen_box">

            <EditText
                android:id="@+id/person_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:background="@null"
                android:inputType="text"
                android:maxLength="30"
                android:textColor="@color/color_373a41"
                android:textSize="12sp" />

        </RelativeLayout>
    </RelativeLayout>

    <!--物品名称-->
    <RelativeLayout
        android:id="@+id/name_rl"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/person_rl"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="9dp">

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/apply_name"
            android:textColor="@color/color_373a41"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@id/name_tv"
            android:background="@drawable/bumen_box">

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:background="@null"
                android:inputType="text"
                android:maxLength="100"
                android:textColor="@color/color_373a41"
                android:textSize="12sp" />

        </RelativeLayout>
    </RelativeLayout>

    <!--备注说明-->
    <RelativeLayout
        android:id="@+id/beizhu_rl"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/name_rl"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="9dp">

        <TextView
            android:id="@+id/beizhu_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/apply_beizhu"
            android:textColor="@color/color_373a41"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@id/beizhu_tv"
            android:background="@drawable/bumen_box">

            <EditText
                android:id="@+id/beizhu_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:background="@null"
                android:inputType="text"
                android:maxLength="200"
                android:textColor="@color/color_373a41"
                android:textSize="12sp" />

        </RelativeLayout>
    </RelativeLayout>


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/beizhu_rl"
        android:layout_marginTop="14dp"
        android:background="@color/color_a0a0a0" />


    <TextView
        android:id="@+id/mingxi_tv"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@id/line"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/apply_mingxi"
        android:textColor="@color/color_373a41"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/delete_tv"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/line"
        android:gravity="center_vertical"
        android:paddingLeft="9dp"
        android:paddingRight="15dp"
        android:text="@string/apply_delete"
        android:textColor="@color/color_30a2d4"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/add_tv"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@id/line"
        android:layout_toLeftOf="@id/delete_tv"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="9dp"
        android:text="@string/apply_add"
        android:textColor="@color/color_30a2d4"
        android:textSize="12sp" />

    <ListView
        android:id="@+id/mingxi_listview_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mingxi_tv"
        android:layout_marginBottom="10dp"
        android:divider="@color/color_ffffff"
        android:dividerHeight="0dp">

    </ListView>
</RelativeLayout>
