<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_purchase_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5"
    tools:context="com.storehouse.wanyu.activity.PurchaseOrder.PurchaseOrderActivity">

    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_ffffff">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@mipmap/back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="采购订单"
            android:textColor="@color/color_0e3247"
            android:textSize="16sp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/order_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/title_rl"
        android:layout_marginTop="0.5dp"
        android:background="@color/color_ffffff">

        <TextView
            android:id="@+id/order_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_30a2d4"
            android:gravity="center"
            android:text="@string/order_wait"
            android:textColor="@color/color_ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/order_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_zhong"
            android:textColor="@color/color_373a41"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/order_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_ku"
            android:textColor="@color/color_373a41"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/order_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_tui"
            android:textColor="@color/color_373a41"
            android:textSize="12sp" />
    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/order_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/order_title"
        android:layout_marginTop="5dp">

        <ListView
            android:id="@+id/order_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:divider="@color/color_f5f5f5"
            android:dividerHeight="5dp"
            android:scrollbars="none">

        </ListView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/no_data_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/order_title"
        android:layout_marginTop="5dp"
        android:background="@color/color_ffffff">

        <ImageView
            android:id="@+id/no_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/no_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_img"
            android:layout_centerHorizontal="true"
            android:text="空空如也"
            android:textColor="@color/color_0e3247"
            android:textSize="12sp" />
    </RelativeLayout>
</RelativeLayout>
